--- a/ab_percentcover.Rmd
+++ b/ab_percentcover.Rmd
@@ -85,7 +85,7 @@ statuscolors <- c(native, exotic)
 ```{r percentcoverprep, echo=FALSE, eval=F}
 
 # percent cover - belt transects, point intercept transects
-abcover_full <- read.csv("deg_percentcover_byspecies_bylifeform_2024.csv", header = TRUE, na.strings=c("","NA")) %>%  
+abcover_full <- read.csv("data/deg_percentcover_byspecies_bylifeform_2024.csv", header = TRUE, na.strings=c("","NA")) %>%  
   dplyr::select(-species_code, -notes, -hillslope, -standtype) %>% 
   na.omit()
   
@@ -124,7 +124,9 @@ glimpse(abcover_full_v_omitground)
 ```{r allvegetationcover, include = TRUE}
 abcover_vegcover <- abcover_full_v %>% # total above veg
   filter(vertical == "1") %>% 
-  group_by(standtype, site, rep) %>% 
+  group_by(
+  # standtype,
+           site, transect) %>% 
   dplyr::summarize(count_per_transect = length(vertical), 
     percentcover_veg = length(vertical)/41, 
     percentcover_ground = (1-percentcover_veg)
@@ -195,7 +197,7 @@ shapiro.test(abcover_vegcover_long_vegonly$percentcover)
 
 ggqqplot(abcover_vegcover_long_vegonly$percentcover) 
 
-abcover_vegcover_long_vegonly$site_rep <- paste(abcover_vegcover_long_vegonly$site, abcover_vegcover_long_vegonly$rep, sep="_") # combine site and rep form to one column
+abcover_vegcover_long_vegonly$site_rep <- paste(abcover_vegcover_long_vegonly$site, abcover_vegcover_long_vegonly$transect, sep="_") # combine site and rep form to one column
 ```
 
 #### categorical by stand type
@@ -209,6 +211,8 @@ shapiro.test(abcover_vegcover_long_vegonly$percentcover)
 # data:  abcover_vegcover_long_vegonly$percentcover
 # W = 0.73103, p-value = 0.0005447 <-- not normally distributed
  
+
+# kruskal.test(percentcover ~ standtype, data = abcover_vegcover_long_vegonly)
 kruskal.test(percentcover ~ standtype, data = abcover_vegcover_long_vegonly)
 # 	Kruskal-Wallis rank sum test
 # 
